--- a/indexes/nsc1025/150.md
+++ b/indexes/nsc1025/150.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】政府干预不能解决美国通货膨胀](../../pages/nsc1025/n13408002.md) 
+#### [袁斌：涉杨佳案的上海警官与脚踩讨薪女的太原恶警](../../pages/nsc1025/n13407544.md) 
+#### [王赫：拜登政府对台政策让中共真假难辨？](../../pages/nsc1025/n13407077.md) 
+#### [王友群：160多名将军被查 中共军队腐败惊人](../../pages/nsc1025/n13406539.md) 
+#### [毛泽东时代与美国进步主义运动的本质相通](../../pages/nsc1025/n13406615.md) 
+#### [东方觉：民主还是“主民”](../../pages/nsc1025/n13406522.md) 
 #### [【名家专栏】媒体诽谤里滕豪斯 或被起诉](../../pages/nsc1025/n13405795.md) 
 #### [陈思敏：澳门赌厅大鳄周焯华落网背后牵连有多广？](../../pages/nsc1025/n13405446.md) 
 #### [沈舟：习近平讲话印证美国对中共军力评估](../../pages/nsc1025/n13404726.md) 
@@ -24,12 +30,6 @@
 #### [郝平：六中全会后中共遭围堵 曝九大热点](../../pages/nsc1025/n13398733.md) 
 #### [谢田：美中经济安全报告触动中共敏感神经](../../pages/nsc1025/n13398537.md) 
 #### [【名家专栏】感恩节寄语：求同存异的智慧](../../pages/nsc1025/n13398035.md) 
-#### [【名家专栏】珍惜美国 感恩神的恩典与祝福](../../pages/nsc1025/n13398013.md) 
-#### [王赫：中俄“新时代战略协作”只是演戏](../../pages/nsc1025/n13397654.md) 
-#### [陈思敏：习近平要加快“科技自主” 中国半导体实力如何？](../../pages/nsc1025/n13397621.md) 
-#### [袁斌：希望隐私得到尊重，会是彭帅本人的意思吗？](../../pages/nsc1025/n13397513.md) 
-#### [杨威：中共又变调 中美关系再陷入恶性循环？](../../pages/nsc1025/n13396881.md) 
-#### [王友群：中共高层都知道迫害法轮功是错的](../../pages/nsc1025/n13396509.md) 
 
 ---
 #### 第 [ [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) ] 页
