--- a/indexes/nsc1025/150.md
+++ b/indexes/nsc1025/150.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共早已向美国宣战（一）](../../pages/nsc1025/n13412647.md) 
+#### [谢田：中共的非洲经营面临全面落空](../../pages/nsc1025/n13413249.md) 
+#### [颜丹：朱贤健越狱后是如何被“成功抓捕”的？](../../pages/nsc1025/n13413115.md) 
+#### [李明：预测全球疫情走向 探讨有效防疫方法](../../pages/nsc1025/n13412060.md) 
+#### [【有冇搞错】澳门“黑色产业链”内幕](../../pages/nsc1025/n13411012.md) 
+#### [袁斌：任彭帅怎么“微笑”，国际社会就是不信](../../pages/nsc1025/n13411960.md) 
+#### [钟原：《求是》杂志透露六中全会的内斗](../../pages/nsc1025/n13409236.md) 
+#### [【名家专栏】中共抛售美国债券谁会受益](../../pages/nsc1025/n13410456.md) 
 #### [【名家专栏】纳瓦罗新书斥中共五大恶行](../../pages/nsc1025/n13410422.md) 
 #### [张菁：中共推进试管婴儿 难阻人口塌陷趋势](../../pages/nsc1025/n13410693.md) 
 #### [岳山：抓周焯华涉抢钱计划 习要党管赌场](../../pages/nsc1025/n13410687.md) 
@@ -22,14 +30,6 @@
 #### [【名家专栏】宗教与美国民主的道德基础](../../pages/nsc1025/n13403931.md) 
 #### [【名家专栏】道德败坏的中共办冬奥会引质疑](../../pages/nsc1025/n13403935.md) 
 #### [周田：美军哪些武器令中共军队难以应对（三）](../../pages/nsc1025/n13404188.md) 
-#### [周晓辉：立陶宛表态 北京会否迎来尴尬冬奥会](../../pages/nsc1025/n13404067.md) 
-#### [袁斌：中共正在为洗白张高丽的性丑闻做铺垫](../../pages/nsc1025/n13403691.md) 
-#### [陆客：共产主义不是生活必需品](../../pages/nsc1025/n13403671.md) 
-#### [王赫：评2021年中共对台政策](../../pages/nsc1025/n13403554.md) 
-#### [金言：二十大防政变 中共穷途末路乱象频发](../../pages/nsc1025/n13403129.md) 
-#### [郝平：破中共极权强大假象 立陶宛抗共五大看点](../../pages/nsc1025/n13402903.md) 
-#### [王友群：六中全会点名的军老虎张阳自杀之谜](../../pages/nsc1025/n13402994.md) 
-#### [钟原：中共藉南非变种病毒转移视线](../../pages/nsc1025/n13402963.md) 
 
 ---
 #### 第 [ [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) ] 页
