have a nice day!

--- a/indexes/nsc1025/151.md
+++ b/indexes/nsc1025/151.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】黑色星期五销售下降意味着什么？](../../pages/nsc1025/n13415102.md) 
 #### [陈思敏：中国人在刚果金频繁遇袭的背后](../../pages/nsc1025/n13414341.md) 
 #### [沈舟：印太冲突风险大 美军战略调整动真格](../../pages/nsc1025/n13413327.md) 
 #### [杨威：中共外交2021面临尴尬收官](../../pages/nsc1025/n13414018.md) 
@@ -29,7 +30,6 @@
 #### [王友群：160多名将军被查 中共军队腐败惊人](../../pages/nsc1025/n13406539.md) 
 #### [毛泽东时代与美国进步主义运动的本质相通](../../pages/nsc1025/n13406615.md) 
 #### [东方觉：民主还是“主民”](../../pages/nsc1025/n13406522.md) 
-#### [【名家专栏】媒体诽谤里滕豪斯 或被起诉](../../pages/nsc1025/n13405795.md) 
 
 ---
-#### 第 [ [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) ] 页
+#### 第 [ [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) ] 页
