--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：《海瑞罢官》与京剧大师马连良之死](../../pages/nsc1028/n13412316.md) 
 #### [中共是怎么为自己涂脂抹粉的（6）](../../pages/nsc1028/n13412021.md) 
 #### [中共是怎么为自己涂脂抹粉的（5）](../../pages/nsc1028/n13405477.md) 
 #### [李清：京剧大师周信芳和他的一家人](../../pages/nsc1028/n13391411.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中国的功臣 中共的囚徒](../../pages/nsc1028/n13291790.md) 
 #### [林辉：“李玉和”原型文革被从六楼扔下摔死](../../pages/nsc1028/n13291564.md) 
 #### [中共罪行录之五十四：中国人失去的自由权利](../../pages/nsc1028/n13290123.md) 
-#### [无神论统御的基督教王国](../../pages/nsc1028/n13281280.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
