--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】横在中国经济前面的5头灰犀牛](../../pages/nsc993/n13412227.md) 
+#### [【网海拾贝】不顾经济损失 WTA与中共死磕到底](../../pages/nsc993/n13415796.md) 
 #### [使用急救设备需先下载APP 网友：反人性](../../pages/nsc993/n13415784.md) 
 #### [对中共说不 WTA被网友赞为“不畏强权的榜样”](../../pages/nsc993/n13415530.md) 
 #### [【网海拾贝】十年后会看，2021年是标志性的一年](../../pages/nsc993/n13409954.md) 
@@ -28,8 +30,6 @@
 #### [关乐：延安整风 （中）](../../pages/nsc993/n13387246.md) 
 #### [【网海拾贝】央视代彭帅写信，中共弱智弱爆了](../../pages/nsc993/n13386281.md) 
 #### [央视公布彭帅“亲笔信”，你信吗？没人信！](../../pages/nsc993/n13386234.md) 
-#### [关乐：延安整风（上）](../../pages/nsc993/n13384652.md) 
-#### [黄明志新歌打动墙内墙外人 听众热评](../../pages/nsc993/n13383506.md) 
 
 ---
-#### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
+#### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
