--- a/indexes/nsc1025/151.md
+++ b/indexes/nsc1025/151.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：中共宗教工作会议泄漏的真相](../../pages/nsc1025/n13417312.md) 
 #### [【网海拾贝】WTA退出中国，震惊的是彭帅还是中共？](../../pages/nsc1025/n13416575.md) 
 #### [周田：美军哪些武器令中共军队难以应对（四）](../../pages/nsc1025/n13416147.md) 
 #### [【名家专栏】堕胎问题事关美国核心价值观](../../pages/nsc1025/n13416925.md) 
@@ -29,7 +30,6 @@
 #### [王赫：十件事揭中共国际经济环境之逆转](../../pages/nsc1025/n13409632.md) 
 #### [王友群：江泽民最想让人们遗忘的是什么？](../../pages/nsc1025/n13408949.md) 
 #### [周晓辉：乌干达火大 非洲多国总统未给北京面子](../../pages/nsc1025/n13408402.md) 
-#### [【名家专栏】中共军队缺乏战斗力的因素](../../pages/nsc1025/n13405794.md) 
 
 ---
 #### 第 [ [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) ] 页
