--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [今年最佳笑话：“中国是当之无愧的民主国家”](../../pages/nsc993/n13419495.md) 
 #### [唐付民：疫苗能成为抗御新冠病毒的唯一方法吗？](../../pages/nsc993/n13417801.md) 
 #### [陆客：共产党和流氓之间只多了一个马克思](../../pages/nsc993/n13417909.md) 
 #### [国外二手旧书被禁售 网友：又一轮文化审查](../../pages/nsc993/n13417659.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】国际奥委会与彭帅的通话可信吗？](../../pages/nsc993/n13393022.md) 
 #### [【网海拾贝】北京办冬奥避不过人权问题](../../pages/nsc993/n13390863.md) 
 #### [【网海拾贝】美应将打开党国互联网作为要务](../../pages/nsc993/n13388446.md) 
-#### [陈达：“收复”台湾实冒名](../../pages/nsc993/n13388644.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
