have a nice day!

--- a/indexes/nsc1025/151.md
+++ b/indexes/nsc1025/151.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共早已向美国宣战（三）](../../pages/nsc1025/n13422075.md) 
+#### [张菁：大数据打造监控平台 河南维稳定制化](../../pages/nsc1025/n13422428.md) 
+#### [王友群：中共最高级别和尚释学诚沦为“色魔”](../../pages/nsc1025/n13420416.md) 
+#### [钟原：中共政治局总结2021工作凸显窘境](../../pages/nsc1025/n13420511.md) 
+#### [天灭中共 预计年底三退人数将达3.9亿](../../pages/nsc1025/n13421120.md) 
 #### [周晓辉：武汉病毒专家赴江家地盘开会 有看点](../../pages/nsc1025/n13420306.md) 
 #### [【名家专栏】美国政府为何希望提高油价](../../pages/nsc1025/n13418977.md) 
 #### [袁斌：可敬的国际女子网协与可悲的国际奥委会](../../pages/nsc1025/n13419562.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】中共早已向美国宣战（一）](../../pages/nsc1025/n13412647.md) 
 #### [谢田：中共的非洲经营面临全面落空](../../pages/nsc1025/n13413249.md) 
 #### [颜丹：朱贤健越狱后是如何被“成功抓捕”的？](../../pages/nsc1025/n13413115.md) 
-#### [李明：预测全球疫情走向 探讨有效防疫方法](../../pages/nsc1025/n13412060.md) 
-#### [【有冇搞错】澳门“黑色产业链”内幕](../../pages/nsc1025/n13411012.md) 
-#### [袁斌：任彭帅怎么“微笑”，国际社会就是不信](../../pages/nsc1025/n13411960.md) 
-#### [钟原：《求是》杂志透露六中全会的内斗](../../pages/nsc1025/n13409236.md) 
-#### [【名家专栏】中共抛售美国债券谁会受益](../../pages/nsc1025/n13410456.md) 
 
 ---
 #### 第 [ [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) ] 页
