--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】国际社会将重估与中共打交道的方式](../../pages/nsc993/n13421686.md) 
+#### [关于“上海红楼特大性奴案”的六大疑问](../../pages/nsc993/n13421580.md) 
+#### [【网海拾贝】全球民主峰会在即 北京绞尽脑汁对阵](../../pages/nsc993/n13419619.md) 
 #### [今年最佳笑话：“中国是当之无愧的民主国家”](../../pages/nsc993/n13419495.md) 
 #### [唐付民：疫苗能成为抗御新冠病毒的唯一方法吗？](../../pages/nsc993/n13417801.md) 
 #### [陆客：共产党和流氓之间只多了一个马克思](../../pages/nsc993/n13417909.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】大难即将临头，柳传志们的恐惧](../../pages/nsc993/n13397607.md) 
 #### [出生率创新低怪疫情？网民：睁说瞎话罢了](../../pages/nsc993/n13397543.md) 
 #### [【网海拾贝】国际奥委会被斥配合中共玩宣传](../../pages/nsc993/n13395182.md) 
-#### [【网海拾贝】国际奥委会与彭帅的通话可信吗？](../../pages/nsc993/n13393022.md) 
-#### [【网海拾贝】北京办冬奥避不过人权问题](../../pages/nsc993/n13390863.md) 
-#### [【网海拾贝】美应将打开党国互联网作为要务](../../pages/nsc993/n13388446.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
