have a nice day!

--- a/indexes/nsc1025/152.md
+++ b/indexes/nsc1025/152.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [郝平：五大暗伤难缝合 中俄关系靠谱吗？](../../pages/nsc1025/n13424925.md) 
 #### [周晓辉：北京正成为孤家寡人 天亦垂象示凶兆](../../pages/nsc1025/n13424859.md) 
 #### [齐航：穿越中华民国 立陶宛挺台秘辛](../../pages/nsc1025/n13424874.md) 
 #### [王赫：中共七大政策重击中国经济](../../pages/nsc1025/n13423618.md) 
@@ -29,7 +30,6 @@
 #### [周晓辉：英日警告北京莫误判 中南海情报有假？](../../pages/nsc1025/n13415531.md) 
 #### [李宇明：中共国有人权吗？](../../pages/nsc1025/n13415830.md) 
 #### [郝平：2022年 中共会发动侵台战争吗？](../../pages/nsc1025/n13415815.md) 
-#### [【名家专栏】黑色星期五销售下降意味着什么？](../../pages/nsc1025/n13415102.md) 
 
 ---
-#### 第 [ [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) ] 页
+#### 第 [ [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) ] 页
