--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】北京冬奥会提前失去了光彩](../../pages/nsc993/n13423999.md) 
+#### [理悟：真要共产了](../../pages/nsc993/n13423754.md) 
 #### [【网海拾贝】国际社会将重估与中共打交道的方式](../../pages/nsc993/n13421686.md) 
 #### [关于“上海红楼特大性奴案”的六大疑问](../../pages/nsc993/n13421580.md) 
 #### [【网海拾贝】全球民主峰会在即 北京绞尽脑汁对阵](../../pages/nsc993/n13419619.md) 
@@ -28,8 +30,6 @@
 #### [中共处罚远东 网友：“变相为民进党助选”](../../pages/nsc993/n13401101.md) 
 #### [【网海拾贝】《纽约邮报》列抵制北京冬奥六条理由](../../pages/nsc993/n13399807.md) 
 #### [【网海拾贝】大难即将临头，柳传志们的恐惧](../../pages/nsc993/n13397607.md) 
-#### [出生率创新低怪疫情？网民：睁说瞎话罢了](../../pages/nsc993/n13397543.md) 
-#### [【网海拾贝】国际奥委会被斥配合中共玩宣传](../../pages/nsc993/n13395182.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
