--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】北京奥运遭抵制，万邦来朝梦碎](../../pages/nsc993/n13426682.md) 
 #### [【网海拾贝】北京冬奥会提前失去了光彩](../../pages/nsc993/n13423999.md) 
 #### [理悟：真要共产了](../../pages/nsc993/n13423754.md) 
 #### [【网海拾贝】国际社会将重估与中共打交道的方式](../../pages/nsc993/n13421686.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】台湾参加民主峰会是划时代历史事件](../../pages/nsc993/n13401831.md) 
 #### [中共处罚远东 网友：“变相为民进党助选”](../../pages/nsc993/n13401101.md) 
 #### [【网海拾贝】《纽约邮报》列抵制北京冬奥六条理由](../../pages/nsc993/n13399807.md) 
-#### [【网海拾贝】大难即将临头，柳传志们的恐惧](../../pages/nsc993/n13397607.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
