--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之六十一：后发的“文革”恶果](../../pages/nsc1028/n13426672.md) 
+#### [中共罪行录之六十：胡风案审讯员的回忆](../../pages/nsc1028/n13423954.md) 
 #### [李清：《海瑞罢官》与京剧大师马连良之死](../../pages/nsc1028/n13412316.md) 
 #### [中共是怎么为自己涂脂抹粉的（6）](../../pages/nsc1028/n13412021.md) 
 #### [中共是怎么为自己涂脂抹粉的（5）](../../pages/nsc1028/n13405477.md) 
@@ -28,8 +30,6 @@
 #### [道教遭中共异化迫害](../../pages/nsc1028/n13281463.md) 
 #### [中国佛教史上最大法难——中共毁灭佛教](../../pages/nsc1028/n13281397.md) 
 #### [王友群：中国的功臣 中共的囚徒](../../pages/nsc1028/n13291790.md) 
-#### [林辉：“李玉和”原型文革被从六楼扔下摔死](../../pages/nsc1028/n13291564.md) 
-#### [中共罪行录之五十四：中国人失去的自由权利](../../pages/nsc1028/n13290123.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
