have a nice day!

--- a/indexes/nsc1025/152.md
+++ b/indexes/nsc1025/152.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】外交抵制北京冬奥？](../../pages/nsc1025/n13429457.md) 
+#### [周晓辉：就疫苗数据起诉卫健委遭拒 谁在怕？](../../pages/nsc1025/n13429764.md) 
+#### [田云：解析中国人权须看透中共](../../pages/nsc1025/n13428756.md) 
+#### [沈舟：中共军队公布的主战装备啥水平（三）](../../pages/nsc1025/n13427425.md) 
+#### [【纪元专栏】加拿大儿童疫苗开打 家长束手无策](../../pages/nsc1025/n13427867.md) 
+#### [夏林：中共四面楚歌与民主标准](../../pages/nsc1025/n13427705.md) 
 #### [【名家专栏】堕胎与自闭症密切关联值得警惕](../../pages/nsc1025/n13426990.md) 
 #### [觅真：请关注日益恶化的中国人权！](../../pages/nsc1025/n13427493.md) 
 #### [张菁：民主峰会吹响民主集结号 中共忌惮](../../pages/nsc1025/n13427458.md) 
@@ -24,12 +30,6 @@
 #### [王友群：中共最高级别和尚释学诚沦为“色魔”](../../pages/nsc1025/n13420416.md) 
 #### [钟原：中共政治局总结2021工作凸显窘境](../../pages/nsc1025/n13420511.md) 
 #### [天灭中共 预计年底三退人数将达3.9亿](../../pages/nsc1025/n13421120.md) 
-#### [周晓辉：武汉病毒专家赴江家地盘开会 有看点](../../pages/nsc1025/n13420306.md) 
-#### [【名家专栏】美国政府为何希望提高油价](../../pages/nsc1025/n13418977.md) 
-#### [袁斌：可敬的国际女子网协与可悲的国际奥委会](../../pages/nsc1025/n13419562.md) 
-#### [陈思敏：上海“小红楼”案还有更大的官没爆出来](../../pages/nsc1025/n13419407.md) 
-#### [何清涟：从习近平打击富豪的规律见时势](../../pages/nsc1025/n13418943.md) 
-#### [【名家专栏】中共早已向美国宣战（二）](../../pages/nsc1025/n13418266.md) 
 
 ---
 #### 第 [ [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) ] 页
