--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [千百度：从“小粉红”到一名法轮功修炼者](../../pages/nsc993/n13429249.md) 
+#### [网友讥讽上海红楼案：“这就是中国好五倍的人权？”](../../pages/nsc993/n13429214.md) 
 #### [【网海拾贝】北京奥运遭抵制，万邦来朝梦碎](../../pages/nsc993/n13426682.md) 
 #### [【网海拾贝】北京冬奥会提前失去了光彩](../../pages/nsc993/n13423999.md) 
 #### [理悟：真要共产了](../../pages/nsc993/n13423754.md) 
@@ -28,8 +30,6 @@
 #### [【三退大潮】红二代：中共是魔鬼 赶紧三退](../../pages/nsc993/n13403593.md) 
 #### [郑纯清：“共产主义大食堂”写照](../../pages/nsc993/n13403590.md) 
 #### [【网海拾贝】台湾参加民主峰会是划时代历史事件](../../pages/nsc993/n13401831.md) 
-#### [中共处罚远东 网友：“变相为民进党助选”](../../pages/nsc993/n13401101.md) 
-#### [【网海拾贝】《纽约邮报》列抵制北京冬奥六条理由](../../pages/nsc993/n13399807.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
