--- a/indexes/nsc1025/152.md
+++ b/indexes/nsc1025/152.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：大陆核酸检测价格下调的背后](../../pages/nsc1025/n13431437.md) 
+#### [李宇明：中国人真有那么幸福吗？](../../pages/nsc1025/n13431452.md) 
+#### [程晓农：中共威胁台湾 日本看到了危险](../../pages/nsc1025/n13431441.md) 
+#### [齐航：揭开中共与尼加拉瓜复交画皮](../../pages/nsc1025/n13431419.md) 
+#### [郝平：试水“生三孩党员先上”政策 党媒遭吐槽](../../pages/nsc1025/n13431388.md) 
+#### [田云：美方对中共多管齐下 党媒评论透不安](../../pages/nsc1025/n13430819.md) 
+#### [钟原：中共经济工作会议承认三重压力](../../pages/nsc1025/n13430325.md) 
+#### [【名家专栏】美国国会不应插手信用卡政策](../../pages/nsc1025/n13429449.md) 
 #### [【名家专栏】外交抵制北京冬奥？](../../pages/nsc1025/n13429457.md) 
 #### [周晓辉：就疫苗数据起诉卫健委遭拒 谁在怕？](../../pages/nsc1025/n13429764.md) 
 #### [田云：解析中国人权须看透中共](../../pages/nsc1025/n13428756.md) 
@@ -22,14 +30,6 @@
 #### [王赫：中共七大政策重击中国经济](../../pages/nsc1025/n13423618.md) 
 #### [木天：从彭帅举报事件看中共本质](../../pages/nsc1025/n13423771.md) 
 #### [李宇明：揭穿《中国的民主》白皮书的谎言](../../pages/nsc1025/n13423131.md) 
-#### [程晓农：中共全国人大代表如何“问政”？](../../pages/nsc1025/n13423232.md) 
-#### [杨威：中共有多“在意”冬奥会被外交抵制](../../pages/nsc1025/n13422533.md) 
-#### [【名家专栏】对比中国和日本人口老龄问题](../../pages/nsc1025/n13422011.md) 
-#### [【名家专栏】中共早已向美国宣战（三）](../../pages/nsc1025/n13422075.md) 
-#### [张菁：大数据打造监控平台 河南维稳定制化](../../pages/nsc1025/n13422428.md) 
-#### [王友群：中共最高级别和尚释学诚沦为“色魔”](../../pages/nsc1025/n13420416.md) 
-#### [钟原：中共政治局总结2021工作凸显窘境](../../pages/nsc1025/n13420511.md) 
-#### [天灭中共 预计年底三退人数将达3.9亿](../../pages/nsc1025/n13421120.md) 
 
 ---
 #### 第 [ [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) ] 页
