--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：屠呦呦的青蒿素和知青的金鸡纳霜](../../pages/nsc1028/n13426884.md) 
+#### [中共是怎么为自己涂脂抹粉的（7）](../../pages/nsc1028/n13431085.md) 
+#### [中共罪行录之六十一：毛泽东的行宫多过帝王](../../pages/nsc1028/n13430849.md) 
+#### [王友群：中华奇女子钟海源被枪杀之谜](../../pages/nsc1028/n13430555.md) 
 #### [中共罪行录之六十一：后发的“文革”恶果](../../pages/nsc1028/n13426672.md) 
 #### [中共罪行录之六十：胡风案审讯员的回忆](../../pages/nsc1028/n13423954.md) 
 #### [李清：《海瑞罢官》与京剧大师马连良之死](../../pages/nsc1028/n13412316.md) 
@@ -26,10 +30,6 @@
 #### [王友群：毛泽东制造的“胡风反革命集团案”](../../pages/nsc1028/n13324909.md) 
 #### [无神论者向神的宣战](../../pages/nsc1028/n13281535.md) 
 #### [王友群：王实味被中共枪毙之谜](../../pages/nsc1028/n13307502.md) 
-#### [重提大陆与台湾互致公开信的那段历史](../../pages/nsc1028/n13305095.md) 
-#### [道教遭中共异化迫害](../../pages/nsc1028/n13281463.md) 
-#### [中国佛教史上最大法难——中共毁灭佛教](../../pages/nsc1028/n13281397.md) 
-#### [王友群：中国的功臣 中共的囚徒](../../pages/nsc1028/n13291790.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
