have a nice day!

--- a/indexes/nsc1025/153.md
+++ b/indexes/nsc1025/153.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共实施新型监控系统](../../pages/nsc1025/n13432545.md) 
+#### [分析：“中共特色”的人权谎言](../../pages/nsc1025/n13432541.md) 
+#### [周晓辉：美国要动外国领导人资产 中共高官肝颤](../../pages/nsc1025/n13432718.md) 
+#### [何清涟：拜登民主峰会沦没为“扮傻游戏”](../../pages/nsc1025/n13432293.md) 
+#### [田云：对抗“侵略者” 七国外长会议再击中共](../../pages/nsc1025/n13432010.md) 
 #### [陆客：没有人能真正颠倒了黑白](../../pages/nsc1025/n13432210.md) 
 #### [王赫：五件事揭中共新版“闭关锁国”](../../pages/nsc1025/n13432099.md) 
 #### [杨威：美国聚拢民主阵营 中共恐惧](../../pages/nsc1025/n13431861.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】曝光中共残酷与荒谬的最佳时刻](../../pages/nsc1025/n13427052.md) 
 #### [王赫：房地产拐点之争与中共政策困境](../../pages/nsc1025/n13426294.md) 
 #### [田云：美澳英多国外交抵制北京冬奥 中共尴尬](../../pages/nsc1025/n13425795.md) 
-#### [岳山：卷入上海红楼性奴案的高官名单](../../pages/nsc1025/n13425474.md) 
-#### [郝平：习警告“三陷阱” 中共一个也没逃过](../../pages/nsc1025/n13426119.md) 
-#### [【名家专栏】税收政策令居民逃离高税州](../../pages/nsc1025/n13424469.md) 
-#### [【名家专栏】为彭帅、法轮功学员等抵制冬奥](../../pages/nsc1025/n13424486.md) 
-#### [郝平：五大暗伤难缝合 中俄关系靠谱吗？](../../pages/nsc1025/n13424925.md) 
 
 ---
-#### 第 [ [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) ] 页
+#### 第 [ [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) ] 页
