--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [两个中国：人类文明的双蓝图（下）](../../pages/nsc1028/n13423132.md) 
+#### [中共是怎么为自己涂脂抹粉的（8）](../../pages/nsc1028/n13432247.md) 
 #### [李清：屠呦呦的青蒿素和知青的金鸡纳霜](../../pages/nsc1028/n13426884.md) 
 #### [中共是怎么为自己涂脂抹粉的（7）](../../pages/nsc1028/n13431085.md) 
 #### [中共罪行录之六十一：毛泽东的行宫多过帝王](../../pages/nsc1028/n13430849.md) 
@@ -28,8 +30,6 @@
 #### [王友群：从“华东王”到“野心家”的饶漱石](../../pages/nsc1028/n13346037.md) 
 #### [中共罪行录之五十五：“文革”的恶果](../../pages/nsc1028/n13324062.md) 
 #### [王友群：毛泽东制造的“胡风反革命集团案”](../../pages/nsc1028/n13324909.md) 
-#### [无神论者向神的宣战](../../pages/nsc1028/n13281535.md) 
-#### [王友群：王实味被中共枪毙之谜](../../pages/nsc1028/n13307502.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
