have a nice day!

--- a/indexes/nsc1025/153.md
+++ b/indexes/nsc1025/153.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共渗透非洲的媒体宣传活动](../../pages/nsc1025/n13434593.md) 
+#### [观雨堂主：谁抽了习近平耳光？](../../pages/nsc1025/n13434167.md) 
 #### [【名家专栏】中共实施新型监控系统](../../pages/nsc1025/n13432545.md) 
 #### [分析：“中共特色”的人权谎言](../../pages/nsc1025/n13432541.md) 
 #### [周晓辉：美国要动外国领导人资产 中共高官肝颤](../../pages/nsc1025/n13432718.md) 
@@ -28,8 +30,6 @@
 #### [觅真：请关注日益恶化的中国人权！](../../pages/nsc1025/n13427493.md) 
 #### [张菁：民主峰会吹响民主集结号 中共忌惮](../../pages/nsc1025/n13427458.md) 
 #### [【名家专栏】曝光中共残酷与荒谬的最佳时刻](../../pages/nsc1025/n13427052.md) 
-#### [王赫：房地产拐点之争与中共政策困境](../../pages/nsc1025/n13426294.md) 
-#### [田云：美澳英多国外交抵制北京冬奥 中共尴尬](../../pages/nsc1025/n13425795.md) 
 
 ---
 #### 第 [ [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) ] 页
