--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】台湾与中共：时与势在谁一边？](../../pages/nsc993/n13434295.md) 
+#### [【网海拾贝】中共自称最民主，全世界都笑了](../../pages/nsc993/n13432337.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13432163.md) 
 #### [伍新：坟坑沿裸秀悲凉](../../pages/nsc993/n13432204.md) 
 #### [【网海拾贝】入世二十年，中共履行承诺了吗？](../../pages/nsc993/n13431146.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】毫无人性的中共有何资格举办奥运？](../../pages/nsc993/n13407661.md) 
 #### [中共封杀《时代革命》获金马奖 网友：掩耳盗铃](../../pages/nsc993/n13407613.md) 
 #### [唐付民：微信账号被永久限制在朋友圈说明了什么？](../../pages/nsc993/n13406949.md) 
-#### [【网海拾贝】彭帅“安全”，张展病危，高智晟们呢？](../../pages/nsc993/n13405587.md) 
-#### [维权律师：北京许娜等11位法轮功学员无罪](../../pages/nsc993/n13405419.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
