have a nice day!

--- a/indexes/nsc1025/153.md
+++ b/indexes/nsc1025/153.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】恒大危机：中共管控又来了](../../pages/nsc1025/n13436785.md) 
+#### [田云：美国制裁商汤科技奏效 陆媒透实情](../../pages/nsc1025/n13435764.md) 
+#### [王赫：中央经济工作会议所透露的习当局困境](../../pages/nsc1025/n13435488.md) 
+#### [钟原：中共改口“动态清零” 疫情却更汹涌](../../pages/nsc1025/n13435740.md) 
+#### [谢田：全球最完整工业体系的炫耀和诅咒](../../pages/nsc1025/n13434214.md) 
+#### [谭笑飞：中共与民主格格不入](../../pages/nsc1025/n13435369.md) 
+#### [郝平：张文宏谈“动态清零” 是在称赞中共吗？](../../pages/nsc1025/n13435315.md) 
+#### [【名家专栏】严控枪支支持率下降 党派分歧加深](../../pages/nsc1025/n13434609.md) 
 #### [【名家专栏】中共渗透非洲的媒体宣传活动](../../pages/nsc1025/n13434593.md) 
 #### [观雨堂主：谁抽了习近平耳光？](../../pages/nsc1025/n13434167.md) 
 #### [【名家专栏】中共实施新型监控系统](../../pages/nsc1025/n13432545.md) 
@@ -22,14 +30,6 @@
 #### [【名家专栏】美国国会不应插手信用卡政策](../../pages/nsc1025/n13429449.md) 
 #### [【名家专栏】外交抵制北京冬奥？](../../pages/nsc1025/n13429457.md) 
 #### [周晓辉：就疫苗数据起诉卫健委遭拒 谁在怕？](../../pages/nsc1025/n13429764.md) 
-#### [田云：解析中国人权须看透中共](../../pages/nsc1025/n13428756.md) 
-#### [沈舟：中共军队公布的主战装备啥水平（三）](../../pages/nsc1025/n13427425.md) 
-#### [【纪元专栏】加拿大儿童疫苗开打 家长束手无策](../../pages/nsc1025/n13427867.md) 
-#### [夏林：中共四面楚歌与民主标准](../../pages/nsc1025/n13427705.md) 
-#### [【名家专栏】堕胎与自闭症密切关联值得警惕](../../pages/nsc1025/n13426990.md) 
-#### [觅真：请关注日益恶化的中国人权！](../../pages/nsc1025/n13427493.md) 
-#### [张菁：民主峰会吹响民主集结号 中共忌惮](../../pages/nsc1025/n13427458.md) 
-#### [【名家专栏】曝光中共残酷与荒谬的最佳时刻](../../pages/nsc1025/n13427052.md) 
 
 ---
 #### 第 [ [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) ] 页
