have a nice day!

--- a/indexes/nsc1025/153.md
+++ b/indexes/nsc1025/153.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [王友群：六中全会后中共内斗升级的六大表现](../../pages/nsc1025/n13440171.md) 
+#### [【纪元专栏】更需关注加拿大的基础设施](../../pages/nsc1025/n13439929.md) 
+#### [田云：英法美三动作抗共 赵立坚“反对”无效](../../pages/nsc1025/n13440685.md) 
+#### [钟原：习近平急与普京视频会晤有何考量？](../../pages/nsc1025/n13439595.md) 
+#### [【名家专栏】美国儿童面临的洗脑教育](../../pages/nsc1025/n13439178.md) 
+#### [郝平：党媒再刊文暗讽习 中南海陷内斗漩涡？](../../pages/nsc1025/n13439757.md) 
 #### [【名家专栏】G7国家需加强对抗中俄联盟](../../pages/nsc1025/n13439191.md) 
 #### [新州：中共借疫情加剧迫害善良](../../pages/nsc1025/n13438950.md) 
 #### [田云：新浪微博被罚 中共网信办避谈细节](../../pages/nsc1025/n13438140.md) 
@@ -24,12 +30,6 @@
 #### [陆客：没有人能真正颠倒了黑白](../../pages/nsc1025/n13432210.md) 
 #### [王赫：五件事揭中共新版“闭关锁国”](../../pages/nsc1025/n13432099.md) 
 #### [杨威：美国聚拢民主阵营 中共恐惧](../../pages/nsc1025/n13431861.md) 
-#### [郝平：习连喊“稳”透明年经济八大混乱信号](../../pages/nsc1025/n13431494.md) 
-#### [【名家专栏】中共对美超限战的演变](../../pages/nsc1025/n13431279.md) 
-#### [颜丹：大陆核酸检测价格下调的背后](../../pages/nsc1025/n13431437.md) 
-#### [李宇明：中国人真有那么幸福吗？](../../pages/nsc1025/n13431452.md) 
-#### [程晓农：中共威胁台湾 日本看到了危险](../../pages/nsc1025/n13431441.md) 
-#### [齐航：揭开中共与尼加拉瓜复交画皮](../../pages/nsc1025/n13431419.md) 
 
 ---
 #### 第 [ [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) ] 页
