--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [清华教授：“对安保无节制投入，究竟在防谁？”](../../pages/nsc993/n13440939.md) 
 #### [“2021年失业的人真的很多吗？”](../../pages/nsc993/n13438732.md) 
 #### [【网海拾贝】中共重新定义民主 欲抢夺民主话语权](../../pages/nsc993/n13438697.md) 
 #### [谢燕益：没有私心就不会有恐惧——梁小军律师吊照听证代理词](../../pages/nsc993/n13437175.md) 
@@ -29,7 +30,6 @@
 #### [使用急救设备需先下载APP 网友：反人性](../../pages/nsc993/n13415784.md) 
 #### [对中共说不 WTA被网友赞为“不畏强权的榜样”](../../pages/nsc993/n13415530.md) 
 #### [【网海拾贝】十年后会看，2021年是标志性的一年](../../pages/nsc993/n13409954.md) 
-#### [谢燕益：致国家卫健委——健康码信息公开申请书](../../pages/nsc993/n13408298.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
