have a nice day!

--- a/indexes/nsc1025/154.md
+++ b/indexes/nsc1025/154.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】“打砸抢”似的社会文化氛围](../../pages/nsc1025/n13443715.md) 
+#### [金言：2022年中国房子会跌成白菜价吗？](../../pages/nsc1025/n13443538.md) 
+#### [李丽：运动会和人权有关吗？](../../pages/nsc1025/n13442830.md) 
+#### [白丁：黄明志与中国情节](../../pages/nsc1025/n13442503.md) 
 #### [周晓辉：习普视频会晤对北京解困帮助多大？](../../pages/nsc1025/n13441997.md) 
 #### [王友群：立陶宛外交官全部撤离中国的四大看点](../../pages/nsc1025/n13442048.md) 
 #### [【名家专栏】阿富汗将成中共下个毒品基地](../../pages/nsc1025/n13441511.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】中共渗透非洲的媒体宣传活动](../../pages/nsc1025/n13434593.md) 
 #### [观雨堂主：谁抽了习近平耳光？](../../pages/nsc1025/n13434167.md) 
 #### [【名家专栏】中共实施新型监控系统](../../pages/nsc1025/n13432545.md) 
-#### [分析：“中共特色”的人权谎言](../../pages/nsc1025/n13432541.md) 
-#### [周晓辉：美国要动外国领导人资产 中共高官肝颤](../../pages/nsc1025/n13432718.md) 
-#### [何清涟：拜登民主峰会沦没为“扮傻游戏”](../../pages/nsc1025/n13432293.md) 
-#### [田云：对抗“侵略者” 七国外长会议再击中共](../../pages/nsc1025/n13432010.md) 
 
 ---
-#### 第 [ [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) ] 页
+#### 第 [ [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) ] 页
