--- a/indexes/nsc1028/58.md
+++ b/indexes/nsc1028/58.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪恶录之六十三：克拉玛依大火](../../pages/nsc1028/n13443384.md) 
 #### [中共罪恶录之六十二：残酷无情的“政审”](../../pages/nsc1028/n13435894.md) 
 #### [两个中国：人类文明的双蓝图（下）](../../pages/nsc1028/n13423132.md) 
 #### [中共是怎么为自己涂脂抹粉的（8）](../../pages/nsc1028/n13432247.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之五十六：地质学泰斗的不堪晚年](../../pages/nsc1028/n13355675.md) 
 #### [重返1949国殇日](../../pages/nsc1028/n13346372.md) 
 #### [王友群：从“华东王”到“野心家”的饶漱石](../../pages/nsc1028/n13346037.md) 
-#### [中共罪行录之五十五：“文革”的恶果](../../pages/nsc1028/n13324062.md) 
 
 ---
 #### 第 [ [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) ] 页
