--- a/indexes/nsc993/68.md
+++ b/indexes/nsc993/68.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】2021，中国民营经济最冷的一年](../../pages/nsc993/n13443352.md) 
+#### [【网海拾贝】中国经济灾难与2022的全球变数](../../pages/nsc993/n13440982.md) 
 #### [清华教授：“对安保无节制投入，究竟在防谁？”](../../pages/nsc993/n13440939.md) 
 #### [“2021年失业的人真的很多吗？”](../../pages/nsc993/n13438732.md) 
 #### [【网海拾贝】中共重新定义民主 欲抢夺民主话语权](../../pages/nsc993/n13438697.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】横在中国经济前面的5头灰犀牛](../../pages/nsc993/n13412227.md) 
 #### [【网海拾贝】不顾经济损失 WTA与中共死磕到底](../../pages/nsc993/n13415796.md) 
 #### [使用急救设备需先下载APP 网友：反人性](../../pages/nsc993/n13415784.md) 
-#### [对中共说不 WTA被网友赞为“不畏强权的榜样”](../../pages/nsc993/n13415530.md) 
-#### [【网海拾贝】十年后会看，2021年是标志性的一年](../../pages/nsc993/n13409954.md) 
 
 ---
 #### 第 [ [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) ] 页
