--- a/indexes/nsc1025/154.md
+++ b/indexes/nsc1025/154.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】父母为何不愿孩子接种COVID疫苗](../../pages/nsc1025/n13445419.md) 
+#### [郝平：2021九类假情报逆袭中南海 习危机重重](../../pages/nsc1025/n13445204.md) 
+#### [田云：中共“民主”下的“失联”怪像](../../pages/nsc1025/n13444846.md) 
+#### [王赫：六件事揭中共“造假王国”](../../pages/nsc1025/n13444468.md) 
+#### [谢田：欧俄北溪二号纠纷与中共的算盘](../../pages/nsc1025/n13444711.md) 
+#### [沈舟：辽宁号出动 中共挑起对抗升级](../../pages/nsc1025/n13444296.md) 
 #### [【名家专栏】“打砸抢”似的社会文化氛围](../../pages/nsc1025/n13443715.md) 
 #### [金言：2022年中国房子会跌成白菜价吗？](../../pages/nsc1025/n13443538.md) 
 #### [李丽：运动会和人权有关吗？](../../pages/nsc1025/n13442830.md) 
@@ -24,12 +30,6 @@
 #### [王赫：中央经济工作会议所透露的习当局困境](../../pages/nsc1025/n13435488.md) 
 #### [钟原：中共改口“动态清零” 疫情却更汹涌](../../pages/nsc1025/n13435740.md) 
 #### [谢田：全球最完整工业体系的炫耀和诅咒](../../pages/nsc1025/n13434214.md) 
-#### [谭笑飞：中共与民主格格不入](../../pages/nsc1025/n13435369.md) 
-#### [郝平：张文宏谈“动态清零” 是在称赞中共吗？](../../pages/nsc1025/n13435315.md) 
-#### [【名家专栏】严控枪支支持率下降 党派分歧加深](../../pages/nsc1025/n13434609.md) 
-#### [【名家专栏】中共渗透非洲的媒体宣传活动](../../pages/nsc1025/n13434593.md) 
-#### [观雨堂主：谁抽了习近平耳光？](../../pages/nsc1025/n13434167.md) 
-#### [【名家专栏】中共实施新型监控系统](../../pages/nsc1025/n13432545.md) 
 
 ---
 #### 第 [ [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) ] 页
