--- a/indexes/nsc1025/154.md
+++ b/indexes/nsc1025/154.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：小米英国骗术被揭与中共入世贸遭人厌](../../pages/nsc1025/n13446746.md) 
+#### [田云：美关注人权制裁中共 党媒贼喊捉贼](../../pages/nsc1025/n13446033.md) 
+#### [唐付民：“全过程民主”是政治霸权下的信口雌黄](../../pages/nsc1025/n13446158.md) 
+#### [杨威：美国连番制裁 中共无奈低调回应](../../pages/nsc1025/n13446037.md) 
+#### [观雨堂主：不要在自取灭亡的路上狂奔](../../pages/nsc1025/n13446085.md) 
+#### [陆客：有些朋友看不透中共的一个原因](../../pages/nsc1025/n13446069.md) 
+#### [程晓农：中国外汇的“一女二嫁”](../../pages/nsc1025/n13446043.md) 
 #### [【名家专栏】父母为何不愿孩子接种COVID疫苗](../../pages/nsc1025/n13445419.md) 
 #### [郝平：2021九类假情报逆袭中南海 习危机重重](../../pages/nsc1025/n13445204.md) 
 #### [田云：中共“民主”下的“失联”怪像](../../pages/nsc1025/n13444846.md) 
@@ -23,13 +30,6 @@
 #### [新州：中共借疫情加剧迫害善良](../../pages/nsc1025/n13438950.md) 
 #### [田云：新浪微博被罚 中共网信办避谈细节](../../pages/nsc1025/n13438140.md) 
 #### [杨威：美国拓展“四方机制”  印太格局再变](../../pages/nsc1025/n13437988.md) 
-#### [【名家专栏】反击中共虚假宣传的绝佳方式](../../pages/nsc1025/n13436697.md) 
-#### [周晓辉：美国新举动戳痛点 中纪委发文五味杂陈](../../pages/nsc1025/n13437455.md) 
-#### [【名家专栏】恒大危机：中共管控又来了](../../pages/nsc1025/n13436785.md) 
-#### [田云：美国制裁商汤科技奏效 陆媒透实情](../../pages/nsc1025/n13435764.md) 
-#### [王赫：中央经济工作会议所透露的习当局困境](../../pages/nsc1025/n13435488.md) 
-#### [钟原：中共改口“动态清零” 疫情却更汹涌](../../pages/nsc1025/n13435740.md) 
-#### [谢田：全球最完整工业体系的炫耀和诅咒](../../pages/nsc1025/n13434214.md) 
 
 ---
 #### 第 [ [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) ] 页
