--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】震旦学生是“告密者”还是“吹哨人”？](../../pages/nsc993/n13448316.md) 
+#### [中共暂停微软搜索引擎，网友斥“不干人事儿”](../../pages/nsc993/n13446416.md) 
 #### [【网海拾贝】中国人权2021年全面倒退](../../pages/nsc993/n13446392.md) 
 #### [官方称“就业形势总体稳定”，评论区大翻车](../../pages/nsc993/n13446333.md) 
 #### [海网：中共已完全丧失了存在的“资格”](../../pages/nsc993/n13445762.md) 
@@ -28,8 +30,6 @@
 #### [唐付民：疫苗能成为抗御新冠病毒的唯一方法吗？](../../pages/nsc993/n13417801.md) 
 #### [陆客：共产党和流氓之间只多了一个马克思](../../pages/nsc993/n13417909.md) 
 #### [国外二手旧书被禁售 网友：又一轮文化审查](../../pages/nsc993/n13417659.md) 
-#### [慧真：自打自嘴巴 犹喊“伟光正”](../../pages/nsc993/n13417740.md) 
-#### [陆客：马克思脚下的坑](../../pages/nsc993/n13417622.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
