--- a/indexes/nsc993/69.md
+++ b/indexes/nsc993/69.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [西安每48小时测1次核酸，网友：“有病吗？”](../../pages/nsc993/n13450529.md) 
 #### [【网海拾贝】彭帅否认性侵，你信吗？](../../pages/nsc993/n13450482.md) 
 #### [张又普：我所知道的中共在美国招聘间谍案例](../../pages/nsc993/n13449142.md) 
 #### [【网海拾贝】震旦学生是“告密者”还是“吹哨人”？](../../pages/nsc993/n13448316.md) 
@@ -29,7 +30,6 @@
 #### [关于“上海红楼特大性奴案”的六大疑问](../../pages/nsc993/n13421580.md) 
 #### [【网海拾贝】全球民主峰会在即 北京绞尽脑汁对阵](../../pages/nsc993/n13419619.md) 
 #### [今年最佳笑话：“中国是当之无愧的民主国家”](../../pages/nsc993/n13419495.md) 
-#### [唐付民：疫苗能成为抗御新冠病毒的唯一方法吗？](../../pages/nsc993/n13417801.md) 
 
 ---
 #### 第 [ [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) ] 页
