--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [【名家专栏】圣诞心愿：权利与自由](../../pages/nsc1035/n13453241.md) 
 #### [赵阳：我行走在黑白两道的舅舅，和他错选的人生](../../pages/nsc1035/n13438837.md) 
 #### [《寻狗》影评：现实版渔夫与金鱼，电影比童话有趣](../../pages/nsc1035/n13389805.md) 
 #### [黄天辰：听“墙外”遥想当年离墙之旅](../../pages/nsc1035/n13377229.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】反迫害22周年 铭记那些英勇的人](../../pages/nsc1035/n13102771.md) 
 #### [林青：天国乐团的能量冲击波](../../pages/nsc1035/n13099634.md) 
 #### [尚荷：绝处逢生？《归途》背后的真实人生](../../pages/nsc1035/n13099470.md) 
-#### [练就耐心带来的益处](../../pages/nsc1035/n13081876.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
