have a nice day!

--- a/indexes/nsc1025/156.md
+++ b/indexes/nsc1025/156.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [田云：美禁新疆产品 中共忧心党媒连发八文](../../pages/nsc1025/n13458813.md) 
+#### [周晓辉：上海向北京发难 中共内部严重分裂](../../pages/nsc1025/n13458302.md) 
+#### [王友群：二十大前中共权斗已经公开化](../../pages/nsc1025/n13458587.md) 
+#### [沈舟：中共真想挑起新甲午战争吗？（上）](../../pages/nsc1025/n13456806.md) 
 #### [郝平：中共颁“反有组织犯罪法” 政法系统或迎风暴](../../pages/nsc1025/n13458451.md) 
 #### [王赫：2021印太军事格局调整十大事件](../../pages/nsc1025/n13457632.md) 
 #### [【名家专栏】新数据显示疫苗难阻疫情](../../pages/nsc1025/n13457907.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】中共利用警察培训渗透外国政府](../../pages/nsc1025/n13450770.md) 
 #### [周晓辉：川普提索赔60万亿 北京回应说明两件事](../../pages/nsc1025/n13451425.md) 
 #### [张菁：学生举报老师 中共教唆为维持洗脑谎言](../../pages/nsc1025/n13451374.md) 
-#### [岳山：习开全国“党内法规会”泄两大隐忧](../../pages/nsc1025/n13450200.md) 
-#### [金言：苛政猛于虎 中共税赋五千年最高](../../pages/nsc1025/n13451292.md) 
-#### [袁斌：香港立法会选举“投票踊跃”？新华社公然造假！](../../pages/nsc1025/n13450454.md) 
-#### [田云：美媒曝光中共网络超限战新证据](../../pages/nsc1025/n13449715.md) 
 
 ---
-#### 第 [ [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) / [148](./148.md) ] 页
+#### 第 [ [156](./156.md) / [155](./155.md) / [154](./154.md) / [153](./153.md) / [152](./152.md) / [151](./151.md) / [150](./150.md) / [149](./149.md) ] 页
